# aris

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  db.py  fix_headers.py  jurisdictions.py  main.py  migrate.py  pyproject.toml  requirements.txt  server.py
agents/: baseline_agent.py  brief_agent.py  compare_agent.py  interpreter.py  learning_agent.py  orchestrator.py  qa_agent.py  scheduler.py  synthesis_agent.py  trend_agent.py
config/: jurisdictions.py  keys.env  keys.env.example  settings.py  states.py
data/baselines/: australia_privacy.json  brazil_lgpd.json  canada_pipeda_c27.json  ccpa_cpra.json  eu_data_act.json  eu_eprivacy.json  eu_gdpr_full.json  index.json  japan_appi.json  singapore_pdpa.json  uk_gdpr_dpa.json  us_privacy_federal.json  us_state_privacy.json
docs/: ARIS_User_Manual.docx
reset_util/: reset.py
scripts/: generate_docx.js
sources/: enforcement_agent.py  federal_agent.py  horizon_agent.py  pdf_agent.py  state_agent_base.py
sources/international/: __init__.py  base.py  brazil.py  canada.py  eu.py  india.py  singapore.py  south_korea.py  stubs.py  uk.py
sources/states/: arizona.py  connecticut.py  florida.py  georgia.py  maryland.py  massachusetts.py  minnesota.py  new_jersey.py  new_york.py  north_carolina.py  oregon.py  pennsylvania.py  texas.py  virginia.py  (+1 more)
tests/: test_domain_foundation.py  test_enforcement.py  test_international.py  test_learning.py  test_suite.py
ui/: index.html  package.json
utils/: __init__.py  cache.py  db.py  jurisdictions.py  notifier.py  rag.py  reporter.py  search.py  server.py
(+18 files in other folders)
